--- a/FileNameModifier/Views/MainWindowView.xaml
+++ b/FileNameModifier/Views/MainWindowView.xaml
@@ -6,15 +6,15 @@
         xmlns:converters="clr-namespace:FileNameModifier.Logic.Converters"
         xmlns:local="clr-namespace:FileNameModifier.ViewModels"
         mc:Ignorable="d"
-        Title="Filename Modifier" Height="139" Width="522" ResizeMode="CanMinimize" WindowStartupLocation="CenterScreen">
+        Title="Filename Modifier" Height="187" Width="522" ResizeMode="CanMinimize" WindowStartupLocation="CenterScreen">
 
     <Window.DataContext>
         <local:MainWindowViewModel x:Name="ViewModel" />
     </Window.DataContext>
 
     <Grid x:Name="MainGrid">
-        <TextBlock Text="(c) Lukáš Bubník 2018" Margin="5,2" FontStyle="Italic" FontSize="10"/>
-        <Grid ShowGridLines="False" HorizontalAlignment="Center" VerticalAlignment="Center">
+        <TextBlock Text="(c) Lukáš Bubník 2018" Margin="10,10" FontStyle="Italic" FontSize="10"/>
+        <Grid ShowGridLines="False" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,20,0,0">
             <!--#region Resources-->
             <Grid.Resources>
                 <!--#region Constants-->
